--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FinanceFlow</title>
-        <link rel="icon" type="image/x-icon" href="src/assets/bubbleicon.svg" />
+        <link rel="icon" type="image/x-icon" href="src/assets/logo.svg" />
     </head>
     <body>
         <div id="root"></div>
