--- a/client/public/404.html
+++ b/client/public/404.html
@@ -5,8 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FinanceFlow</title>
         <script>
-            // Preserve the URL path and redirect to the root
-            window.location.href = "/" + window.location.pathname.slice(1);
+            // Store the intended path and redirect to root once
+            var currentPath = window.location.pathname;
+            // Only redirect if we're not already at the root
+            if (currentPath !== "/" && !sessionStorage.getItem("redirected")) {
+                // Set a flag to prevent redirect loops
+                sessionStorage.setItem("redirected", "true");
+                sessionStorage.setItem("intendedPath", currentPath);
+                window.location.href = "/";
+            }
         </script>
     </head>
     <body>
